# RIDM-Backend

./: .env.example  .gitignore  README.md  data.json  getkdcadata.py  gunicorn.conf.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py  __main__.py
models/: __init__.py  auth.py  benefit.py  benifit.py  disease.py  symptom.py  user.py
routes/v1/: __init__.py  auth.py  benefits.py  diseases.py  symptoms.py  tests.py  users.py
test/: test.py
utils/: database.py  image.py  jwt.py
